force-app/main/default/objects/Suncard_Photo__c/Suncard_Photo__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A custom setting to house the Suncard Photo URL to use while calling out to the web service.</description>
    <label>Suncard Photo Service</label>
</CustomObject>