force-app/main/default/objects/Suncard_Photo__c/fields/Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Key__c</fullName>
    <description>The consumer key used for the service</description>
    <label>Consumer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>