force-app/main/default/objects/Suncard_Photo__c/fields/Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key__c</fullName>
    <description>The secret key used for the service</description>
    <label>Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>