force-app/main/default/objects/Suncard_Photo__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>The URL to call the web service.</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>